fix z-index

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -6,7 +6,7 @@
 body > nav {
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: 3;
   background-color: var(--background-color);
 }
 
